app2/manifest.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: app2
  labels:
    app: app2
    purpose: tesing-app2 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
      purpose: tesing-app2 
  template:
    metadata:
      labels:
        app: app2
        purpose: tesing-app2 
    spec:
      containers:
      - name: app2
        image: naveenrajoli/app2:1.0.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc 
spec:
  selector:
    app: app2
    purpose: tesing-app2 
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
