app2/ingress-controller.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: app2-ingress
  annotations:    
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:343430925817:certificate/566224e2-204f-4152-a825-1da50311d157
    alb.ingress.kubernetes.io/group.name: naveen-alb
spec:
  ingressClassName: alb
  rules:
  - host: "app2.naveenrajoli.site"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app2-svc
            port: 
              number: 80
